Workaround Web Link
Signed-off-by: Bryan Dixon <javawolfpack@gmail.com>

--- a/perflab-writeup/writeup.tex
+++ b/perflab-writeup/writeup.tex
@@ -163,7 +163,7 @@ Resulting score is 37
 
 This would result in an average of 2851 cycles per second. Scoring is based
 on the CPE results for the \verb|blocks-small.bmp| image
-running on the \verb|perf| machines. The \verb|perf| machines are Freescale i.MX 6 Quad Core ARM processors, you can run your code on the \verb|perf| machines through the web interface at \url{http://perf.bryancdixon.com}.
+running on the \verb|perf| machines. The \verb|perf| machines are Freescale i.MX 6 Quad Core ARM processors, you can run your code on the \verb|perf| machines through the web interface at \url{http://bryancdixon.com:8002}.
 
 
 The  provided Makefile compiles your program; you may need to modify it to
